rayane/ingress/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress-kong
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  #ingressClassName: kong
  #tls:
  #- secretName: cert-tls
  #  hosts:
  #    - http.k8s.test
  rules:
  - host: http-kong.duckdns.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: http-server-service
            port:
              name: svc-port
      - pathType: Prefix
        path: /app
        backend:
          service:
            name: http-server2-service
            port:
              name: svc-port

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-ingress-kong
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  #ingressClassName: kong
  #tls:
  #- secretName: cert-tls
  #  hosts:
  #    - websocket.k8s.test
  #    - websocket2.k8s.test
  rules:
  - host: ws-kong.duckdns.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: websocket2-service
            port:
              name: svc-port
